--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "UTS Aldy Data Alumni"
+rootProject.name = "Pendataan Alumni"
 include ':app'
