--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId 'pnj.uts.aldycky_bagus_witjaksana'
+        applicationId 'pnj.uts.aldyckybaguswitjaksana'
         minSdk 17
         targetSdk 32
         versionCode 1
